venky updated about page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1>About</h1>
-<p>More videos are coming soon...</p>
+<p>More videos are coming soon...please watch and subscribe</p>
 </body>
 </html>
